Came back to fix an Overflow Bug

--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -123,4 +123,5 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
